[package]
name = "zone-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quinn = "0.11.9"
rcgen = "0.14.8"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
validator = {version = "0.20.0", features = ["derive"] }
